fixing fieldset layout issue in discussion for CHROME

--- a/public/stylesheets/blognog2.css
+++ b/public/stylesheets/blognog2.css
@@ -194,6 +194,8 @@ img {
 
 .discussionWidget {
 	margin:0 0 0 10px;
+        padding:0 10px 0 0;
+        width:520px;
 }
 
 
@@ -413,16 +415,16 @@ img {
 
   .targets  {width:100px;height:50px;border:1px dotted #000;margin:10px;display:inline-block;float:left;}
 
-  .perceptiontargets  {width:200px;height:150px;display:inline-block;float:right;}
+  .perceptiontargets  {width:200px;height:150px;display:inline-block;float:right;border:1px solid #ddd;}
 
   .hover {
     border: 1px dashed #aaa;
     background:#ff9; }
 
   .targetFrame {
-      width:420px;
+      width:405px;
       float:right;
-      padding:20px 10px 20px 10px;
+      padding:20px 10px 0 0;
       /*border:1px dotted #000;*/
       border-bottom:2px solid #000;
       border-left:2px solid #000;
